clusters/apps/env/production/soho/hajimari/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`start.${SECRET_DOMAIN}`)"
      middlewares:
        - name: l5d-hajimari-middleware
          namespace: soho
      services:
        - name: hajimari
          port: 3000
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: start.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-hajimari-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "hajimari.soho.svc.cluster.local:3000"
