clusters/apps/env/production/soho/hajimari/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hajimari
spec:
  hosts:
    - 'start.${SECRET_DOMAIN}'
    - 'hajimari.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: hajimari.soho.svc.cluster.local
          weight: 100
